Bug 223874 - akonadi-ports regression: Actions->New Sub To-do is enabled when no to-do is selected
Summary: akonadi-ports regression: Actions->New Sub To-do is enabled when no to-do is ...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3
Platform: Compiled Sources Unspecified
: NOR normal
Target Milestone: ---
Assignee: Sergio Martins
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-23 01:02 UTC by Sergio Martins
Modified: 2010-01-29 13:52 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergio Martins 2010-01-23 01:02:37 UTC
Version:            (using Devel)
Installed from:    Compiled sources

In 4.3 "Actions->New Sub To-do" is disabled when no to-do is selected.

It shouldn't be enabled because it's impossible to create a new sub-todo.
Comment 1 Laurent Montel 2010-01-29 10:31:20 UTC
Can reproduce here.
Regards
Comment 2 Sergio Martins 2010-01-29 12:53:34 UTC
Reopening as discussed with Montel in irc. The issue is still there.
Comment 3 Sergio Martins 2010-01-29 13:52:27 UTC
SVN commit 1081963 by smartins:

Fix regression. Don't enable "New Sub-todo" action when no parent to-do is selected.

Do not backport.

BUG: 223874


 M  +8 -5      actionmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1081963