Fix regression. Don't enable "New Sub-todo" action when no parent to-do is selected.

Do not backport.

BUG: 223874

svn path=/trunk/KDE/kdepim/; revision=1081963